...
	onChangeText: (text: string) => void
}
const EmailInputField: FC<InputFieldProps> = (props) => {
	return (
		<InputField
			{...props}
			testID="email-input"
			icon={<MaterialIcons name="email" size={24} color="#472836" />}
			placeholder="email"
			keyboardType="email-address"
		/>
	)
}

const PasswordInputField: FC<InputFieldProps> = (props) => {
	return (
		<InputField
			{...props}
			testID="password-input"
			icon={<MaterialIcons name="lock" size={24} color="#472836" />}
			placeholder="password"
			secureTextEntry
		/>
	)
}
...
