...
		joinGameAlert: "Please Enter Valid Code",
		joinGameHeader: "Join Game",
		pasteFromClipboard: "Paste From Clipboard",
		joinGameButton: "Join Game",
	},
	createGamePage: {
		header: "Create Game",
		subheader:
			"Copy and share the lobby code with your friends so they can join you",
		button: "START",
	},
	gamePage: {
		round: "Round %{round}",
...
			invalidName: "Invalid name",
			invalidCode: "Invalid code",
			invalidCodeLength: "Invalid code length",
			invalidCodeCharacters: "Invalid code characters",
		},
		signIn: {
			signInButton: "Sign In",
			signInHeader: "Sign In",
			signInSubheader: "Enter your email and password to sign in",
			forgotPassword: "Forgot Password?",
			signUp: "Sign Up",
			noAccount: "Don't have an account?",
		},
...
